--- a/fluent-api-test/pom.xml
+++ b/fluent-api-test/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.rapidpm.vaadin</groupId>
     <artifactId>fluent-api-for-flow</artifactId>
-    <version>00.08.00-RPM</version>
+    <version>00.08.01-RPM-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>org.rapidpm.vaadin</groupId>
       <artifactId>fluent-api-for-flow-impl</artifactId>
-      <version>00.08.00-RPM</version>
+      <version>00.08.01-RPM-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.github.vaadin-developer.id-generator-for-flow</groupId>
