--- a/fluent-api-test/pom.xml
+++ b/fluent-api-test/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.rapidpm.vaadin</groupId>
     <artifactId>fluent-api-for-flow</artifactId>
-    <version>00.08.01-RPM-SNAPSHOT</version>
+    <version>00.08.01-RPM</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -32,18 +32,47 @@
     <maven.deploy.skip>true</maven.deploy.skip>
   </properties>
 
+  <dependencyManagement>
+    <dependencies>
+      <!--Infrastructure-->
+      <dependency>
+        <groupId>org.apache.meecrowave</groupId>
+        <artifactId>meecrowave-core</artifactId>
+        <version>${meecrowave.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.meecrowave</groupId>
+        <artifactId>meecrowave-specs-api</artifactId>
+        <version>${meecrowave.version}</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.rapidpm.vaadin</groupId>
       <artifactId>fluent-api-for-flow-impl</artifactId>
-      <version>00.08.01-RPM-SNAPSHOT</version>
+      <version>00.08.01-RPM</version>
     </dependency>
     <dependency>
-      <groupId>com.github.vaadin-developer.id-generator-for-flow</groupId>
-      <artifactId>id-generator-for-flow-impl</artifactId>
-      <version>e61bd2a2</version>
+      <groupId>org.rapidpm.vaadin</groupId>
+      <artifactId>id-generator-for-flow</artifactId>
+      <version>00.09.02-RPM</version>
     </dependency>
 
+    <!--TDD-->
+    <dependency>
+      <groupId>org.apache.meecrowave</groupId>
+      <artifactId>meecrowave-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.meecrowave</groupId>
+      <artifactId>meecrowave-specs-api</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
