preparations for 00.08.02-RPM-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   <groupId>org.rapidpm.vaadin</groupId>
   <artifactId>fluent-api-for-flow</artifactId>
   <name>Fluent API for Flow</name>
-  <version>00.08.01-RPM</version>
+  <version>00.08.02-RPM-SNAPSHOT</version>
 
   <packaging>pom</packaging>
 
