--- a/fluent-api-test/pom.xml
+++ b/fluent-api-test/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.rapidpm.vaadin</groupId>
     <artifactId>fluent-api-for-flow</artifactId>
-    <version>00.08.01-RPM</version>
+    <version>00.08.02-RPM-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -54,7 +54,7 @@
     <dependency>
       <groupId>org.rapidpm.vaadin</groupId>
       <artifactId>fluent-api-for-flow-impl</artifactId>
-      <version>00.08.01-RPM</version>
+      <version>00.08.02-RPM-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.rapidpm.vaadin</groupId>
